feat: Adds a full color theme and a mock joke to the MainActivity.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="backgroundColor">#e15258</color>
-    <color name="textColor">#ffffff</color>
+    <!-- Color scheme used is Material Design Blue Gray -->
+    <color name="backgroundColor">#607D8B</color>
+    <color name="textColor">#B0BEC5</color>
+    <color name="jokeColor">#CFD8DC</color>
+    <color name="buttonColor">#263238</color>
 </resources>
