fix: Changes the header text to better represent the vision of the app.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="@dimen/spacing_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:text="Joke of the day"
+        android:text="Joke of the moment"
         android:textColor="@color/textColor"
         android:textSize="18sp"/>
 
