feat: Adds a new Android library for displaying the jokes generated by the Java library.

--- a/jokedisplay/src/main/res/layout/activity_joke.xml
+++ b/jokedisplay/src/main/res/layout/activity_joke.xml
@@ -11,7 +11,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.damian.builditbigger.MainActivity">
+    tools:context="com.damian.jokedisplay.JokeActivity">
 
     <TextView
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
         android:layout_marginTop="@dimen/spacing_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:text="Joke of the moment"
+        android:text="Did you know?"
         android:textColor="@color/textColor"
         android:textSize="18sp"/>
 
@@ -38,25 +38,5 @@
             android:textSize="24sp"
             tools:text="On the set of Walker Texas Ranger Chuck Norris brought a dying lamb back to life by nuzzling it with his beard. As the onlookers gathered, the lamb sprang to life. Chuck Norris then roundhouse kicked it, killing it instantly. This was just to prove that the good Chuck giveth."/>
     </ScrollView>
-
-    <Button
-        android:id="@+id/jokeButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="@dimen/spacing_vertical_margin"
-        android:layout_marginTop="@dimen/spacing_vertical_margin"
-        android:background="@color/buttonColor"
-        android:text="Tell me another joke"
-        android:textColor="@color/textColor"/>
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id">
-    </com.google.android.gms.ads.AdView>
 
 </LinearLayout>
